--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="Classification" content="Business" />
+    <meta name="HandheldFriendly" content="True" />
+    <meta name="language" content="EN" />
+    <meta name="robots" content="index,follow" />
 
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="theme-color" content="#000000">
-	<!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
-    -->
-	<link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-	<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-	<!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <title>Little Lemon</title>
+    <meta
+      name="description"
+      content="The website of the Little Lemon Restaurant, a family run 
+      Mediterranean restaurant located in Chicago, Illinois. Please come 
+      and enjoy our wide selection of authentic Mediterranean cuisine!"
+    />
+    <meta name="author" content="Vivekananda Reddy M" />
+    <meta name="theme-color" content="#FFFFFF" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-	<title>React App</title>
-</head>
+    <!--Open graph Protocol-->
+    <meta property="og:title" content="Little Lemon" />
+    <meta name="og:site_name" content="Little Lemon" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:description"
+      content="
+    The website of the Little Lemon Restaurant, a family run 
+      Mediterranean restaurant located in Chicago, Illinois. Please come 
+      and enjoy our wide selection of authentic Mediterranean cuisine!"
+    />
+    <meta name="og:locale" content="en_US" />
+    <meta name="og:country-name" content="USA" />
 
-<body>
-	<noscript>
-		You need to enable JavaScript to run this app.
-	</noscript>
-	<div id="root"></div>
-	<!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    <meta name="apple-mobile-web-app-title" content="Little Lemon" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-touch-fullscreen" content="yes" />
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+    <meta property="og:image" content="icon.png" />
+    <link rel="icon" href="%PUBLIC_URL%/icon.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.png" />
+    <link rel="icon" type="image/x-icon" href="icon.png" />
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-</body>
+    <!--THINGS TO CHANGE-->
+    <meta property="og:url" content="https://www.mysite" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Karla:wght@500&family=Markazi+Text&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+	  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    
+    <script src="https://raw.githubusercontent.com/Meta-Front-End-Developer-PC/capstone/master/api.js"></script>
+  </head>
 
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <script src="https://raw.githubusercontent.com/Meta-Front-End-Developer-PC/capstone/master/api.js"></script>
+  </body>
 </html>
